# kenken

./: .gitignore  .gitmodules  CMakeLists.txt  kenkengraphicsrectitem.cpp  kenkengraphicsrectitem.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
data/: 2333.txt  2562.txt  6351.txt  6668.txt  7821.txt  9813.txt  CMakeLists.txt  data.qrc  invalid.3134.txt
lib/: CMakeLists.txt  parser.cpp  parser.hpp  solver.cpp  solver.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt
tests/parser/: CMakeLists.txt  tst_parsertestcase.cpp
tests/solver/: CMakeLists.txt  tst_solvertestcase.cpp
